--- a/1.weather aggregation.md
+++ b/1.weather aggregation.md
@@ -1,21 +1,21 @@
 Weather Data Aggregation
 
-Overview
+Overview:
 This project includes a Python function designed to aggregate weather data from a CSV file. The function reads weather records, calculates the average temperature and humidity for each city, and handles missing or invalid data gracefully.
 
-Functionality
+Functionality:
 weather_data(file_path): Aggregates temperature and humidity data for each city from the provided CSV file.
 
-File Structure
+File Structure:
 weather_data.py: Contains the Python function to aggregate weather data.
 top100cities_weather_data.csv: Sample CSV file containing weather data.
 
 
-Requirements
+Requirements:
 Python 3.x
 Google Colab (or any Python environment)
 
-Instructions
+Instructions:
 Upload the CSV File:
 Use Google Colab's file upload feature to upload top100cities_weather_data.csv into the Colab environment.
 
